--- a/app/src/main/res/layout/activity_relative_layout.xml
+++ b/app/src/main/res/layout/activity_relative_layout.xml
@@ -1,62 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RelativeLayout">
+    tools:context=".RelativeLayout"
+    android:layout_margin="40dp"
+    android:id="@+id/relativeLayoutParent"
+    >
 
-    <RelativeLayout
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+    <TextView
+        android:id="@+id/firstTextView"
+        android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:fontFamily="sans-serif-black"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:text="Hello"/>
 
-        <TextView
-            android:id="@+id/Firstcomment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Firstcomment" />
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/inputEditTextBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/firstTextView"
+        android:hint="Enter any text"
+        />
 
-        <Button
-            android:id="@+id/firstbutton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/Firstcomment"
-            android:layout_marginTop="20dp"
-            android:text="Button" />
-
-        <Button
-            android:id="@+id/secondbutton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/Firstcomment"
-            android:layout_marginTop="20dp"
-            android:layout_toRightOf="@id/firstbutton"
-            android:text="Button" />
-
-        <RelativeLayout
-            android:layout_below="@id/secondbutton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="20dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="text"/>
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_below="@+id/inputEditTextBox"
+        android:layout_marginVertical="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Change Text" />
 
 
-        </RelativeLayout>
 
-
-    </RelativeLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
